# CTkToolTip

./: README.md  pyproject.toml
CTkToolTip/: __init__.py  ctk_tooltip.py  example.py
