[tool.poetry]
name = "ctktooltip"
version = "0.1.0"
description = "Small pop-up widget for displaying details inside customtkinter."
authors = ["P3rdigas <pr.perdigao@campus.fct.unl.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
customtkinter = "^5.2.1"
packaging = "^23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
